fix semantic icons not showing up

--- a/client/src/styles/base.css
+++ b/client/src/styles/base.css
@@ -1,5 +1,5 @@
 body * {
-  font-family: 'Catamaran', sans-serif !important; 
+  font-family: 'Catamaran', sans-serif; 
 }
 
 p.copyright > span {
